# fastapi-react

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  test.db
backend/app/: config.py  database.py  main.py  models.py  schemas.py  services.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/components/: Dashboard.jsx  Navbar.jsx
